--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
             <img src="./youcommunik/public/img/contact-icon.png" alt="contact">
         </div>
     </header>
-    
+        <!-- section bleu -->
+        <div>
+            <img src="./youcommunik/public/img/packages.png" alt="packages">
+            <h2>A chaque étape son pack</h2>
+            <h3>naitre,grandir et prospérer.</h3>
+        </div>
+        <!-- section blanc -->
+        <div>
+            <img src="./youcommunik/public/img/icon-eclosion.png" alt="eclosion">
+            <h2>Eclosion</h2>
+            <p>Le pack Eclosion est parfait pour le début d'une activité.</p>
+            <p>Il comprend la création de votre identité graphique,incluant votre <br>
+            logo et un support de prospection pour aller à la rencontre de vos <br>
+            futus clients, ainsi qu'un site internet single page pour avoir une présence en ligne.</p>
+        </div>
+        <!-- section sable -->
+         <div>
+         <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
+         <p>Logo</p>
+         <img src="./youcommunik/public/img/icon-charte-graphic.png" alt="charte_graphic">
+         <p>charte graphic</p>
+         <img src="./youcommunik/public/img/site-single-page.png" alt="site-single-page">
+         <p>site single page</p>
+         <img src="./youcommunik/public/img/carte-visite.png" alt="carte-visite">
+         <p>Carte de visite</p>
+        </div>
 </body>
 </html>
