segment 2 html done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>A chaque étape son pack</h2>
             <h3>naitre,grandir et prospérer.</h3>
         </div>
-        <!-- section blanc -->
+        <!-- section blanc 1 -->
         <div>
             <img src="./youcommunik/public/img/icon-eclosion.png" alt="eclosion">
             <h2>Eclosion</h2>
@@ -34,16 +34,39 @@
             logo et un support de prospection pour aller à la rencontre de vos <br>
             futus clients, ainsi qu'un site internet single page pour avoir une présence en ligne.</p>
         </div>
-        <!-- section sable -->
+        <!-- section sable 1 -->
          <div>
          <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
          <p>Logo</p>
          <img src="./youcommunik/public/img/icon-charte-graphic.png" alt="charte_graphic">
-         <p>charte graphic</p>
+         <p>charte graphique</p>
          <img src="./youcommunik/public/img/site-single-page.png" alt="site-single-page">
          <p>site single page</p>
          <img src="./youcommunik/public/img/carte-visite.png" alt="carte-visite">
          <p>Carte de visite</p>
         </div>
+        <!-- section blanc 2 -->
+        <div>
+            <img src="./youcommunik/public/img/icon-evolution.png" alt="icon-evolution">
+            <h2>Evolution</h2>
+            <p>Le pack Evolution vous propose une identité visuelle complete, <br>comprenant la création de votre logo,de la charte graphique et de <br>vos cartes de visite.</p>
+            <p>Il intègre également le développement d'un site vitrine afin <br>
+            d'informer 24/7,d'etre contacté, d'analyser le flux de vos visites,... <br>
+            et de faire un lien vers vos réseaux sociaux.</p>
+        </div>
+        <!-- section sable 2 -->
+         <div>
+         <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
+         <p>Logo</p>
+         <img src="./youcommunik/public/img/icon-charte-graphic.png" alt="charte_graphic">
+         <p>Charte graphique</p>
+         <img src="./youcommunik/public/img/site-vitrine.png" alt="site-vitrine">
+         <p>Site vitrine</p>
+         <img src="./youcommunik/public/img/reseaux-sociaux.png" alt="reseaux-sociaux">
+         <p>Réseaux sociaux</p>
+         <img src="./youcommunik/public/img/carte-visite.png" alt="carte-visite">
+         <p>Carte de visite</p>
+        </div>
+        
 </body>
 </html>
