--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouCommunik</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -17,6 +18,14 @@
             <img src="./youcommunik/public/img/projets-icon.png" alt="projets">
             <img src="./youcommunik/public/img/temoignages-icon.png" alt="temoignages">
             <img src="./youcommunik/public/img/contact-icon.png" alt="contact">
+        </div>
+        <div>
+            <p>HOME</p>
+            <p>PACKAGES</p>
+            <p>OUTILS</p>
+            <p>PROJETS</p>
+            <p>TEMPOGNAGES</p>
+            <p>CONTACT</p>
         </div>
     </header>
         <!-- section bleu -->
