--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <header>
@@ -40,15 +42,19 @@
         </div>
     </header>
         <!-- section bleu -->
-        <div>
+    <div id="bleu">
+        <div id="boite">
             <img src="./youcommunik/public/img/packages.png" alt="packages">
-            <h2>A chaque étape son pack</h2>
-            <h3>naitre,grandir et prospérer.</h3>
         </div>
+        <div id="titre">
+            <h2>A chaque étape son pack</h2>
+            <h4>naitre,grandir et prospérer.</h4>
+        </div>
+    </div>
         <!-- section blanc 1 -->
-        <div>
+        <div id="diveclo">
+            <h2>Éclosion</h2>
             <img src="./youcommunik/public/img/icon-eclosion.png" alt="eclosion">
-            <h2>Eclosion</h2>
             <p>Le pack Eclosion est parfait pour le début d'une activité.</p>
             <p>Il comprend la création de votre identité graphique,incluant votre <br>
             logo et un support de prospection pour aller à la rencontre de vos <br>
