--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
             <h4>naitre,grandir et prospérer.</h4>
         </div>
     </div>
+    <section id="secteclo">
         <!-- section blanc 1 -->
-        <div id="diveclo">
+        <div>
             <h2>Éclosion</h2>
-            <img src="./youcommunik/public/img/icon-eclosion.png" alt="eclosion">
-            <p>Le pack Eclosion est parfait pour le début d'une activité.</p>
-            <p>Il comprend la création de votre identité graphique,incluant votre <br>
-            logo et un support de prospection pour aller à la rencontre de vos <br>
-            futus clients, ainsi qu'un site internet single page pour avoir une présence en ligne.</p>
         </div>
+        <div id="diveclo">
+            <img src="./youcommunik/public/img/icon-eclosion.png" alt="eclosion">
+            <p>Le pack Eclosion est parfait pour le début d'une activité. <br><br>
+            Il comprend la création de votre identité graphique,incluant votre <br>
+            logo et un support de prospection pour aller à la rencontre de vos <br>
+            futus clients, ainsi qu'un site internet single page pour avoir une <br> présence en ligne.</p>
+        </div>
+    </section>
         <!-- section sable 1 -->
          <div>
          <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
