--- a/index.html
+++ b/index.html
@@ -64,26 +64,36 @@
             futus clients, ainsi qu'un site internet single page pour avoir une <br> présence en ligne.</p>
         </div>
     </section>
-        <!-- section sable 1 -->
-         <div>
-         <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
-         <p>Logo</p>
-         <img src="./youcommunik/public/img/icon-charte-graphic.png" alt="charte_graphic">
-         <p>charte graphique</p>
-         <img src="./youcommunik/public/img/site-single-page.png" alt="site-single-page">
-         <p>site single page</p>
-         <img src="./youcommunik/public/img/carte-visite.png" alt="carte-visite">
-         <p>Carte de visite</p>
+    <!-- section sable 1 -->
+    <section id="divicon">
+        <div id="dicon">
+            <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
+            <div><p>Logo</p></div>
         </div>
+        <div id="dicon">
+            <img src="./youcommunik/public/img/icon-charte-graphic.png" alt="charte_graphic">
+            <div><p>charte graphique</p></div>
+        </div>
+        <div id="dicon">
+            <img src="./youcommunik/public/img/site-single-page.png" alt="site-single-page">
+            <div><p>site single page</p></div>
+        </div>
+        <div id="dicon">
+            <img src="./youcommunik/public/img/carte-visite.png" alt="carte-visite">
+            <div><p>Carte de visite</p></div>
+        </div>
+    </section>
         <!-- section blanc 2 -->
+    <section id="secteclo">
         <div>
-            <img src="./youcommunik/public/img/icon-evolution.png" alt="icon-evolution">
             <h2>Evolution</h2>
+        </div>
+            <img src="./youcommunik/public/img/icon-evolution.png" alt="icon-evolution">
             <p>Le pack Evolution vous propose une identité visuelle complete, <br>comprenant la création de votre logo,de la charte graphique et de <br>vos cartes de visite.</p>
             <p>Il intègre également le développement d'un site vitrine afin <br>
             d'informer 24/7,d'etre contacté, d'analyser le flux de vos visites,... <br>
             et de faire un lien vers vos réseaux sociaux.</p>
-        </div>
+    </section>
         <!-- section sable 2 -->
          <div>
          <img src="./youcommunik/public/img/Logo-logo.png" alt="logo_livre">
