--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="./youcommunik/public/img/packages.png" alt="packages">
         </div>
         <div id="titre">
-            <h2>A chaque étape son pack</h2>
+            <h2>À chaque étape son pack</h2>
             <h4>naitre,grandir et prospérer.</h4>
         </div>
     </div>
