--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div id="titre">
             <h2>À chaque étape son pack</h2>
-            <h4>naitre,grandir et prospérer.</h4>
+            <h4>naître,grandir et prospérer.</h4>
         </div>
     </div>
     <section id="secteclo">
