--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div id="diveclo">
             <img src="./youcommunik/public/img/icon-eclosion.png" alt="eclosion">
-            <p>Le pack Eclosion est parfait pour le début d'une activité. <br><br>
+            <p>Le pack Éclosion est parfait pour le début d'une activité. <br><br>
             Il comprend la création de votre identité graphique,incluant votre <br>
             logo et un support de prospection pour aller à la rencontre de vos <br>
             futus clients, ainsi qu'un site internet single page pour avoir une <br> présence en ligne.</p>
