--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- section blanc 2 -->
     <section id="secteclo">
         <div>
-            <h2>Evolution</h2>
+            <h2>Évolution</h2>
         </div>
         <div id="divevo">
             <img src="./youcommunik/public/img/icon-evolution.png" alt="icon-evolution">
