--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div id="divevo">
             <img src="./youcommunik/public/img/icon-evolution.png" alt="icon-evolution">
-            <p>Le pack Evolution vous propose une identité visuelle complete, <br>comprenant la création de votre logo,de la charte graphique et de <br>vos cartes de visite. <br> <br>
+            <p>Le pack Évolution vous propose une identité visuelle complete, <br>comprenant la création de votre logo,de la charte graphique et de <br>vos cartes de visite. <br> <br>
             Il intègre également le développement d'un site vitrine afin <br>
             d'informer 24/7,d'etre contacté, d'analyser le flux de vos visites,... <br>
             et de faire un lien vers vos réseaux sociaux.</p>
