--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div><p>Campagne Adwords</p></div>
             </div>
             <div id="dicon">
-                <img src="./youcommunik/public/img/icon-campagne-e-mailing.png" alt="icon-campagne-e-mailing">
+                <img src="./youcommunik/public/img/icon-campagne-e-mailing.png" alt="campagne-e-mailing">
                 <div><p>Campag,e e-mailing</p></div>
             </div>
         </section>
