--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div><p>Campagne Facebook</p></div>
             </div>
             <div id="dicon">
-                <img src="./youcommunik/public/img/icon-campagne-adwords.png" alt="icon-campagne-adwords">
+                <img src="./youcommunik/public/img/icon-campagne-adwords.png" alt="campagne-adwords">
                 <div><p>Campagne Adwords</p></div>
             </div>
             <div id="dicon">
