--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div><p>Alanyse du flux web</p></div>
             </div>
             <div id="dicon">
-                <img src="./youcommunik/public/img/icon-campagne-facebook.png" alt="icon-campagne-facebook">
+                <img src="./youcommunik/public/img/icon-campagne-facebook.png" alt="campagne-facebook">
                 <div><p>Campagne Facebook</p></div>
             </div>
             <div id="dicon">
