--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!-- section sable 3 -->
          <section id="divicon">
             <div id="dicon">
-                <img src="./youcommunik/public/img/icon-analyse-flux-web.png" alt="icon-analyse-flux-web">
+                <img src="./youcommunik/public/img/icon-analyse-flux-web.png" alt="analyse-flux-web">
                 <div><p>Alanyse du flux web</p></div>
             </div>
             <div id="dicon">
